--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
 Theme Name:         The Center for Educational Innovation
 Theme URI:          http://www.the-cei.org/
+Github Theme URI:	https://github.com/unwrittendevin/cei-master
 Description:        The CEI theme is built upon thecei, a WordPress starter theme based on HTML5 Boilerplate & Bootstrap. <a href="https://github.com/thecei/thecei/contributors">Contribute on GitHub</a>
 Version:            1.0.0
 Author:             Devin Kerr
